--- a/style/main.css
+++ b/style/main.css
@@ -83,3 +83,12 @@ header nav a:hover{
 .botao i{
     margin-right: 8px;
 }
+
+.container{
+    margin-left: 20px;    
+}
+
+.jogo-principal .container{
+    width: 70%;
+}
+
