--- a/style/main.css
+++ b/style/main.css
@@ -13,7 +13,7 @@
 
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -92,3 +92,12 @@ header nav a:hover{
     width: 70%;
 }
 
+.box-jogo{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.carrosel-jogos{
+    margin-top: 5px;
+}
