--- a/style/main.css
+++ b/style/main.css
@@ -45,7 +45,7 @@ header nav a:hover{
 
 .jogo-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('/img/league-of-legends.png');
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('/img/league-of-legends1.jpeg');
     height: 400px;
     background-size: cover;
     display: flex;
